--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   background-color: grey;
 }
 
-row {
-  text-align: center;
+video {
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
